# kikicabowabocoin

./: .gitignore  Dockerfile  LICENSE  README.md  WHITEPAPER.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt
deploy/: bootstrap_seed.sh  deploy.sh  kikicabowabocoin.service  setup_pi_miner.sh
kikicabowabocoin/: __init__.py  __main__.py  blockchain.py  cli.py  config.py  crypto.py  mempool.py  miner.py  network.py  seed_tracker.py  transaction.py  wallet.py
tests/: conftest.py  test_blockchain.py  test_crypto.py  test_mempool.py  test_miner.py  test_network.py  test_transaction.py  test_wallet.py
